# Cambricon_NaiveProfiling

./: .gitignore  torch_add.py  torch_maxpool2d.py
bangC_test/: CMakeLists.txt  add_3pipeline.mlu  add_naive.mlu  bang_add.mlu  build.sh  common.h  maxpool.mlu
bangC_test/add/: add.h  add.mlu  add_naive.mlu  main.cpp  main.mlu
bangC_test/add_3pipeline/: add_3pipeline.mlu
bangC_test/maxpool/: maxpool.mlu
cnnl_test/add/: CMakeLists.txt  Makefile  add  add.cc
cnnl_test/maxPool2d/: Makefile  maxPool2d.cc
cnnl_test/public/: public.h  tool.h
cuda_ops_test/: PreprocessCUKernels.py  README.md  TransCUKernels.py  gen_bang_code.sh
cuda_ops_test/Ascend_kernels/gen_bang_results/: level_1_prlblem_10_sample_0_3D_tensor_matrix_multiplication-output.txt  level_1_prlblem_11_sample_0_4D_tensor_matrix_multiplication-output.txt  level_1_prlblem_11_sample_0_4D_tensor_matrix_multiplication.mlu  level_1_prlblem_12_sample_0_Matmul_with_diagonal_matrices_-output.txt  level_1_prlblem_12_sample_0_Matmul_with_diagonal_matrices_.mlu  level_1_prlblem_13_sample_0_Matmul_for_symmetric_matrices-output.txt  level_1_prlblem_13_sample_0_Matmul_for_symmetric_matrices.mlu  level_1_prlblem_14_sample_0_Matmul_for_upper_triangular_matrices-output.txt  level_1_prlblem_14_sample_0_Matmul_for_upper_triangular_matrices.mlu  level_1_prlblem_15_sample_0_Matmul_for_lower_triangular_matrices-output.txt  level_1_prlblem_15_sample_0_Matmul_for_lower_triangular_matrices.mlu  level_1_prlblem_16_sample_0_Matmul_with_transposed_A-output.txt  level_1_prlblem_16_sample_0_Matmul_with_transposed_A.mlu  level_1_prlblem_17_sample_0_Matmul_with_transposed_B-output.txt  level_1_prlblem_18_sample_0_Matmul_with_transposed_both-output.txt  level_1_prlblem_18_sample_0_Matmul_with_transposed_both.mlu  level_1_prlblem_19_sample_0_ReLU-output.txt  level_1_prlblem_19_sample_0_ReLU.mlu  level_1_prlblem_1_sample_0_Square_matrix_multiplication_-output.txt  level_1_prlblem_1_sample_0_Square_matrix_multiplication_.mlu  level_1_prlblem_20_sample_0_LeakyReLU-output.txt  level_1_prlblem_20_sample_0_LeakyReLU.mlu  level_1_prlblem_21_sample_0_Sigmoid-output.txt  level_1_prlblem_21_sample_0_Sigmoid.mlu  level_1_prlblem_22_sample_0_Tanh-output.txt  level_1_prlblem_22_sample_0_Tanh.mlu  level_1_prlblem_23_sample_0_Softmax-output.txt  level_1_prlblem_23_sample_0_Softmax.mlu  level_1_prlblem_24_sample_0_LogSoftmax-output.txt  level_1_prlblem_24_sample_0_LogSoftmax.mlu  level_1_prlblem_25_sample_0_Swish-output.txt  level_1_prlblem_25_sample_0_Swish.mlu  level_1_prlblem_26_sample_0_GELU_-output.txt  level_1_prlblem_26_sample_0_GELU_.mlu  level_1_prlblem_27_sample_0_SELU_-output.txt  level_1_prlblem_27_sample_0_SELU_.mlu  level_1_prlblem_28_sample_0_HardSigmoid-output.txt  level_1_prlblem_28_sample_0_HardSigmoid.mlu  level_1_prlblem_29_sample_0_Softplus-output.txt  level_1_prlblem_29_sample_0_Softplus.mlu  (+76 more)
cuda_ops_test/cuda_ops/: 100_HingeLoss.cu  10_3D_tensor_matrix_multiplication.cu  11_4D_tensor_matrix_multiplication.cu  12_Matmul_with_diagonal_matrices_.cu  13_Matmul_for_symmetric_matrices.cu  14_Matmul_for_upper_triangular_matrices.cu  16_Matmul_with_transposed_A.cu  17_Matmul_with_transposed_B.cu  18_Matmul_with_transposed_both.cu  19_ReLU.cu  1_Square_matrix_multiplication_.cu  20_LeakyReLU.cu  21_Sigmoid.cu  22_Tanh.cu  23_Softmax.cu  24_LogSoftmax.cu  25_Swish.cu  26_GELU_.cu  27_SELU_.cu  28_HardSigmoid.cu  29_Softplus.cu  2_Standard_matrix_multiplication_.cu  30_Softsign.cu  31_ELU.cu  32_HardTanh.cu  33_BatchNorm.cu  35_GroupNorm_.cu  36_RMSNorm_.cu  37_FrobeniusNorm_.cu  38_L1Norm_.cu  39_L2Norm_.cu  3_Batched_matrix_multiplication.cu  40_LayerNorm.cu  41_Max_Pooling_1D.cu  42_Max_Pooling_2D.cu  43_Max_Pooling_3D.cu  44_Average_Pooling_1D.cu  45_Average_Pooling_2D.cu  46_Average_Pooling_3D.cu  47_Sum_reduction_over_a_dimension.cu  (+49 more)
cuda_ops_test/gen_bang_results/: 100_HingeLoss-output.txt  100_HingeLoss.mlu  10_3D_tensor_matrix_multiplication-output.txt  11_4D_tensor_matrix_multiplication-output.txt  12_Matmul_with_diagonal_matrices_-output.txt  13_Matmul_for_symmetric_matrices-output.txt  14_Matmul_for_upper_triangular_matrices-output.txt  16_Matmul_with_transposed_A-output.txt  17_Matmul_with_transposed_B-output.txt  18_Matmul_with_transposed_both-output.txt  19_ReLU-output.txt  1_Square_matrix_multiplication_-output.txt  20_LeakyReLU-output.txt  20_LeakyReLU.mlu  21_Sigmoid-output.txt  22_Tanh-output.txt  23_Softmax-output.txt  24_LogSoftmax-output.txt  25_Swish-output.txt  25_Swish.mlu  26_GELU_-output.txt  27_SELU_-output.txt  28_HardSigmoid-output.txt  29_Softplus-output.txt  29_Softplus.mlu  2_Standard_matrix_multiplication_-output.txt  30_Softsign-output.txt  30_Softsign.mlu  31_ELU-output.txt  31_ELU.mlu  32_HardTanh-output.txt  33_BatchNorm-output.txt  35_GroupNorm_-output.txt  36_RMSNorm_-output.txt  37_FrobeniusNorm_-output.txt  38_L1Norm_-output.txt  39_L2Norm_-output.txt  3_Batched_matrix_multiplication-output.txt  40_LayerNorm-output.txt  41_Max_Pooling_1D-output.txt  (+65 more)
model_zoo/BERT/: README.md  env.sh
model_zoo/BERT/models/: README.md  modeling.py  run_squad.py
model_zoo/LSTM/: LSTM_Infer.sh  lstm.py
model_zoo/Naive_ResNet18/: Naive_ResNet18.py  ResNet18_Infer.sh
model_zoo/SSD_ResNet18/: README.md  main.py  requirements.txt
model_zoo/SSD_ResNet50/: README.md
model_zoo/tools/: test_training_benchmarks.sh
torch_mlu_ext/: README.md  gen_ops_from_bang.py
torch_mlu_ext/gen_mlu_extension/: gen_unittests.py
torch_mlu_ext/mlu_extension/: setup.py
torch_mlu_test/: torch_add.py  torch_maxpool2d.py
(+517 files in other folders)
